# dscc-attendance-creator

./: .gitignore  README.md  attendance.py  pyproject.toml  setup.py  test.ipynb
attendance/: __main__.py  get.py
attendance.egg-info/: PKG-INFO  SOURCES.txt
attendance/config/: consts.json  consts.py  settings.json
attendance/templates/: attendance_template.jinja  end_template.jinja
output/: attendance_CC0003_100203_2301.txt  end_CC0003_100203_2301.txt
src/attendance/: __main__.py  config.json  config.py  get.py  get_config.py
src/attendance/templates/: attendance_template.jinja  end_template.jinja
