[build-system]
requires = ["setuptools >= 71.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["attendance"]
include-package-data = true

[tool.setuptools.package-data]
attendance = ["config.json"]

[project]
name = "attendance"
version = "1.0.0"
dependencies = ["click >= 8.1.0", "jinja2"]
requires-python = ">=3.7"
authors = [{ name = "Ryan", email = "ryanxdlee@gmail.com" }]
description = "CLI application to create DSCC NTU WLP attendance messages"
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    ]

[project.urls]
Homepage = "https://github.com/LxdRyan/dscc-attendance-creator"
Repository = "https://github.com/LxdRyan/dscc-attendance-creator.git"
Issues = "https://github.com/LxdRyan/dscc-attendance-creator/issues"

[project.scripts]
attendance = "attendance.__main__:cli"